# kenken-solver-generator

./: .gitignore  README.md  TODOS.md  ex1.py  ex2.py  ex3.py  ex3_.py  extract.py  kenken_coordinate_fixer.py  kenken_generator.py  kenken_input_solver.py  kenken_solver.py  pyproject.toml  requirements.txt
descriptors/: 5x5_puzzle.txt  8x8_puzzle.txt  9x9_puzzle.txt  descriptor_.txt  descriptor_x.txt  log  your_puzzle.txt
manim-env/: pyvenv.cfg
