[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenken-generator"
version = "0.1.0"
description = "Add your project description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncer==0.0.8",
    "attrs==25.3.0",
    "av==13.1.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloup==3.0.7",
    "coloredlogs==15.0.1",
    "decorator==5.2.1",
    "fastapi==0.115.13",
    "ffmpy==0.6.0",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "glcontext==3.0.0",
    "gradio_client==1.10.3",
    "groovy==0.1.2",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "imageio==2.37.0",
    "isosurfaces==0.1.2",
    "Jinja2==3.1.6",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "lazy_loader==0.4",
    "llvmlite==0.44.0",
    "manim==0.19.0",
    "ManimPango==0.6.0",
    "mapbox_earcut==1.0.3",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "moderngl==5.12.0",
    "moderngl-window==3.1.1",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "onnxruntime==1.22.0",
    "opencv-python-headless==4.11.0.86",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.3.0",
    "pango==0.0.1",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pooch==1.8.2",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "pycairo==1.28.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydub==0.25.1",
    "pyglet==2.1.6",
    "pyglm==2.8.2",
    "Pygments==2.19.1",
    "PyMatting==1.1.14",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "rembg==2.0.66",
    "requests==2.32.4",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "ruff==0.12.0",
    "safehttpx==0.1.6",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "screeninfo==0.8.1",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "skia-pathops==0.8.0.post2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "srt==3.5.3",
    "starlette==0.46.2",
    "svgelements==1.9.6",
    "sympy==1.14.0",
    "tifffile==2025.6.11",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "watchdog==6.0.0",
    "websockets==15.0.1",
    "yarl==1.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
